# sdxpy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  bin  config.py  examples.mk  foo  pyproject.toml  requirements.txt  setup.cfg  typos.toml
_extras/: links.md  thanks.yml
_static/: chota.css  mccole.css
_templates/: page.html  single_page.html
archive/: Makefile  backup.py  backup_oop.py  hash_all.out  hash_all.py  index.md  test_backup.py  test_backup_manual.out  test_backup_manual.sh  test_hash_all.py
bib/: W1044733395.json  W110783737.json  W1126531559.json  W1136934958.json  W1259118344.json  W127985704.json  W1451767896.json  W1479814088.json  W1482300319.json  W1482427528.json  W1485189370.json  W1485419863.json  W1487352565.json  W1490353092.json  W1492049786.json  W1493932658.json  W1495562482.json  W1495954282.json  W1496427023.json  W1496757467.json  W1496881650.json  W1508675239.json  W1508737654.json  W1509099673.json  W1513561051.json  W1514773514.json  W1519748092.json  W1521771217.json  W1525023388.json  W1528458588.json  W1531677614.json  W1533966846.json  W1534050139.json  W1539701587.json  W1542263607.json  W1544974355.json  W1547904251.json  W1548522298.json  W1548851995.json  W1557575653.json  (+2152 more)
bibliography/: index.md
binary/: 3bit.tbl  Makefile  bird.txt  calcsize.out  calcsize.py  dynamic_format.out  dynamic_format.py  formats.tbl  index.md  pack_count.out  pack_unicode.py  pack_unpack.out  pack_unpack.py  variable_packing.out  variable_packing.py  variable_unpacking.py
bonus/: Makefile  attribute.py  (+18 more)
(+2267 files in other folders)
