[project]
name = "sdxpy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=2.0.0",
]

[tool.mccole]
title = "Software Design by Example"
repo = "https://github.com/gvwilson/sdxpy"
skips = [
    "**/__pycache__",
    "*.as",
    "*.dot",
    "*.js",
    "*.json",
    "*.mx",
    "*.py",
    "*.pyc",
    "*.sh",
    "*.tll",
    "*.txt",
    "*.webp",
    "*.xml",
    "*.yml",
    "Makefile",
    "docs/**",
    "unused/**",
]
